...
    "main": true,
    "name": "sandbox",
    "path": "/home/ubuntu/code/sandbox",
    "port": 41660
   },
   {
    "branch": "subtract",
    "head": "ae6d87978c",
    "name": "subtract",
    "path": "/home/ubuntu/code/sandbox-subtract",
    "port": 41661
   }
  ]
...
